// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell renders correctly 1`] = `
<DocumentFragment>
  <div
    class="o-grid__cell"
    data-name="grid-cell"
  >
    lorem
  </div>
</DocumentFragment>
`;

exports[`Cell renders correctly with correct alignment 1`] = `
<DocumentFragment>
  <div
    class="o-grid u-text demo"
    data-name="grid"
  >
    <div
      class="o-grid__cell o-grid__cell--top"
      data-name="grid-cell"
    >
      <div
        class="text"
      >
        first
      </div>
    </div>
    <div
      class="o-grid__cell o-grid__cell--center"
      data-name="grid-cell"
    >
      <div
        class="text"
      >
        second
      </div>
    </div>
    <div
      class="o-grid__cell o-grid__cell--bottom"
      data-name="grid-cell"
    >
      <div
        class="text"
      >
        third
      </div>
    </div>
    <div
      class="o-grid__cell"
      data-name="grid-cell"
    >
      <div
        class="text"
      >
        fourth
        <br />
        fourth
        <br />
        fourth
        <br />
        fourth
        <br />
        fourth
        <br />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Cell renders correctly with responsive props 1`] = `
<DocumentFragment>
  <div
    class="o-grid u-text o-grid--wrap demo"
    data-name="grid"
  >
    <div
      class="o-grid__cell o-grid__cell--width-100 o-grid__cell--width-33@small"
      data-name="grid-cell"
    >
      <div
        class="text"
      >
        small
      </div>
    </div>
    <div
      class="o-grid__cell o-grid__cell--width-100 o-grid__cell--width-33@medium"
      data-name="grid-cell"
    >
      <div
        class="text"
      >
        medium
      </div>
    </div>
    <div
      class="o-grid__cell o-grid__cell--width-100 o-grid__cell--width-33@large"
      data-name="grid-cell"
    >
      <div
        class="text"
      >
        large
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Cell renders correctly without gutters 1`] = `
<DocumentFragment>
  <div
    class="o-grid u-text demo"
    data-name="grid"
  >
    <div
      class="o-grid__cell"
      data-name="grid-cell"
    >
      <div
        class="text"
      >
        first
      </div>
    </div>
    <div
      class="o-grid__cell"
      data-name="grid-cell"
    >
      <div
        class="text"
      >
        second
      </div>
    </div>
    <div
      class="o-grid__cell o-grid__cell--no-gutter"
      data-name="grid-cell"
    >
      <div
        class="text"
      >
        third
      </div>
    </div>
  </div>
</DocumentFragment>
`;
